[package]
name = "firmware"
version = "0.0.0" # Versioning is done automatically. This is just a placeholder.
edition = "2021"

# [dependencies]
# stm32f4xx-hal = { version = "=0.22.1", features = ["stm32f446"] }
# cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
# cortex-m-rt = "0.7.5"
# panic-halt = "1.0.0"


[dependencies]
embedded-hal = "=1.0.0"
nb = "=1.1.0"
cortex-m = "=0.7.7"
cortex-m-rt = "=0.7.5"
panic-halt = "=1.0.0"
stm32f4xx-hal = {version = "=0.22.1", features = ["stm32f446", "defmt"] }
defmt = "=1.0.1"
defmt-rtt = "=1.0.0"
