[package]
name = "iol"
version = "0.0.0"
edition = "2021"

[features]
# device = []
master = []
iols = []

[dependencies]
embassy-sync = "=0.7.0"
embedded-hal = "=1.0.0"
defmt = { version = "=1.0.1", optional = true }
log = { version = "=0.4.27", optional = true }

[dev-dependencies]
tokio = { version = "=1.45.1", features = ["macros", "rt-multi-thread"] }
mockall = "=0.13.1"
critical-section = { version = "=1.2.0", features = ["std"] }
