[package]
name = "l6360"
version = "0.0.0"
edition = "2021"

[dependencies]
embedded-hal-async = "=1.0.0"
embedded-hal = "=1.0.0"
defmt = { version = "=1.0.1", optional = true }
log = { version = "=0.4.27", optional = true }
num_enum = { version = "=0.7.3", default-features = false }

[dev-dependencies]
tokio = { version = "=1.45.1", features = ["macros", "rt-multi-thread"] }
mockall = "=0.13.1"
