[package]
name = "pc_example"
version = "0.0.0" # Versioning is done automatically. This is just a placeholder.
edition = "2021"

[dependencies]
tokio = { version = "=1.45.1", features = ["macros", "rt-multi-thread", "time"] }
critical-section = { version = "=1.2.0", features = ["std"] }
chrono = "=0.4.41"

log = "=0.4.27"
env_logger = "=0.11.8"
anstyle = "=1.0.10"

l6360 = { version = "=0.0.0", path = "../../l6360" }
iol = { version = "=0.0.0", path = "../../iol", features = ["master", "iols", "log"] }
